--- a/doc/tips/switching_to_usedirs/discussion.mdwn
+++ b/doc/tips/switching_to_usedirs/discussion.mdwn
@@ -19,3 +19,6 @@ This may serve only to highlight my naivete, but what are the advantages of the 
 It seems to me that the only advantage is slightly tidier URLs, but with the disadvantage that source files change dir level and relative links need to change too.
 
 -- [[KarlMW]]
+
+The cleaner urls seem worth it to me. The `urlto()` function makes it easy
+for ikiwiki code to deal with the path changes. --[[Joey]]
