--- a/doc/todo/__34__subscribe_to_this_page__34___checkbox_on_edit_form.mdwn
+++ b/doc/todo/__34__subscribe_to_this_page__34___checkbox_on_edit_form.mdwn
@@ -1,6 +1,6 @@
 The edit form could include a checkbox "subscribe to this page", allowing a
 user to add a page to their subscribed list while editing.  This would prove
-particularly useful for [[todo]] and [[bug]] items, to allow users to receive
+particularly useful for [[todo]] and [bug](bugs) items, to allow users to receive
 notifications for activity on their reports.
 
 --[[JoshTriplett]]
