no, brokenlink is how this bug gets fixed :-)

--- a/doc/todo/wanted_pages_plugin.mdwn
+++ b/doc/todo/wanted_pages_plugin.mdwn
@@ -1,1 +1,3 @@
 [[plugins/orphans]] shows all pages that exist but have no links to them.  We should also support the converse, wanted pages: pages that have links to them but do not exist.  --[[JoshTriplett]]
+
+That's [[plugins/brokenlinks]] so [[done]] already I guess --[[Joey]]
