--- a/doc/plugins/template.mdwn
+++ b/doc/plugins/template.mdwn
@@ -2,63 +2,5 @@
 [[tag type/format]]
 
 With this plugin, you can set up templates, and cause them to be filled out
-and inserted into pages in the wiki. Using a template works like this:
-
-	\[[template id=foo name="Charley" color="red" age=11]]
-
-This fills out the template `templates/foo`, filling in the `color` and `age`
-fields on it with the specified values, and inserts the result into the page.
-
-(Note that if the template doesn't exist, the page will provide a link that
-can be used to create it.)
-
-A value can include any markup that would be allowed in the wiki page
-outside the template. Triple-quoting the value even allows quotes to be
-included in it. Combined with multi-line quoted values, this allows for
-large chunks of marked up text to be embedded into a template:
-
-	\[[template id=foo name="Sally" color="green" age=8 notes="""
-	* \[[Charley]]'s sister.
-	* "I want to be an astronaut when I grow up."
-	* Really 8 and a half.
-	"""]]
-
-Some templates are included in the wiki by default; these are listed in the
-[[templates]] page.
-
-To create a template, make a page in the wiki named `template/foo`. Note
-that this is a different location than the directory used for the
-[[templates|wikitemplates]] used to build the wiki itself, which is not
-part of the wiki.
-
-The template uses the syntax used by the [[cpan HTML::Template]] perl
-module, which allows for some fairly complex things to be done. Consult its
-documentation for the full syntax, but all you really need to know are a
-few things:
-
-* To insert the value of a variable, use `<TMPL_VAR variable>`.
-* To make a block of text conditional on a variable being set use
-  `<TMPL_IF NAME="variable">text</TMPL_IF>`.
-* To use one block of text if a variable is set and a second if it's not,
-  use `<TMPL_IF NAME="variable">text<TMPL_ELSE>other text</TMPL_IF>`
-
-Here's a sample template:
-
-	<span class="infobox">
-	Name: <TMPL_VAR name><br />
-	Age: <TMPL_VAR age><br />
-	<TMPL_IF NAME="color">
-	Favorite color: <TMPL_VAR color><br />
-	<TMPL_ELSE>
-	No favorite color.<br />
-	</TMPL_IF>
-	<TMPL_IF NAME="notes">
-	<hr />
-	<TMPL_VAR notes>
-	</TMPL_IF>
-	</span>
-
-The filled out template will be formatted the same as the rest of the page
-that contains it, so you can include WikiLinks and all other forms of wiki
-markup in the template. Note though that such WikiLinks will not show up as
-backlinks to the page that uses the template.
+and inserted into pages in the wiki. It's documented and existing templates
+are listed in the [[templates]] page.
