--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -10,7 +10,7 @@ To enable plugins, use the `--plugin` switch described in
 Enable the [[goodstuff]] plugin to get a nice selection of plugins that
 will fit most uses of ikiwiki.
 
-# Plugin directory
+## Plugin directory
 
 [[inline pages="plugins/* and !plugins/type/* and !plugins/write and
 !plugins/contrib and !*/Discussion"
