--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -7,12 +7,17 @@ Templates are files that can be filled out and inserted into pages in the
 wiki.
 
 [[if test="enabled(template) and enabled(inline)" then="""
+
+## Available templates
+
 These templates are available for inclusion onto other pages in this
 wiki:
 
 [[inline pages="templates/* and !*/discussion" feeds=no archive=yes
 sort=title template=titlepage]]
 """]]
+
+## Using a template
 
 Using a template works like this:
 
@@ -31,6 +36,8 @@ large chunks of marked up text to be embedded into a template:
         * "I want to be an astronaut when I grow up."
         * Really 8 and a half.
         """]]
+
+## Creating a template
 
 To create a template, simply add a template directive to a page, and page will
 provide a link that can be used to create the template. The template is a
