move examples of how to use shortcuts into the shortcuts page so it's available in basewiki

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -2,6 +2,12 @@
      then="This wiki has shortcuts **enabled**."
      else="This wiki has shortcuts **disabled**."]]
 
+Some examples of using shortcuts include:
+
+	\[[google foo]]
+	\[[wikipedia War_of_1812]]
+	\[[debbug 12345]]
+
 This page controls what shortcut links the wiki supports.
 
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
