--- a/doc/plugins/shortcut.mdwn
+++ b/doc/plugins/shortcut.mdwn
@@ -2,11 +2,7 @@
 [[tag type/format]]
 
 This plugin allows external links to commonly linked to sites to be made
-more easily using shortcuts. Some examples of using shortcuts include:
-
-	\[[google foo]]
-	\[[wikipedia War_of_1812]]
-	\[[debbug 12345]]
+more easily using shortcuts.
 
 The available shortcuts are defined on the [[shortcuts]] page in
 the wiki.
