--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -2,7 +2,8 @@ How about a plugin adding a
 [[preprocessor_directive|preprocessordirective]] to render some given LaTeX
 and include it in the page?  This could either render the LaTeX as a PNG via
 [[debpkg dvipng]] and include the resulting image in the page, or perhaps
-render via [HeVeA](http://pauillac.inria.fr/~maranget/hevea/index.html) or
+render via [HeVeA](http://pauillac.inria.fr/~maranget/hevea/index.html),
+[TeX2page](http://www.ccs.neu.edu/~dorai/tex2page/tex2page-doc.html), or
 similar. Useful for mathematics, as well as for stuff like the LaTeX version
 of the ikiwiki [[/logo]].
 
