--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -13,6 +13,7 @@ Projects
 * The [maildirman wiki](http://svcs.cs.pdx.edu/maildirman)
 * The [linuxbierwanderung wiki/homepage](http://www.linuxbierwanderung.org)
 * The [Relativistic Programming research wiki](http://wiki.cs.pdx.edu/rp).
+* [Debian-IN](http://debian-in.alioth.debian.org/)
 
 Personal sites and blogs
 ========================
