* Updated Spanish translation from Victor Moral.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
     until the wiki is building and already locked, unless it's aggregating.
     When aggregating, it does not wait for the lock if it cannot get it, and
     instead exits, to prevent aggregating processes from piling up.
+  * Updated Spanish translation from Victor Moral.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 20 May 2007 22:23:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 21 May 2007 13:18:37 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
