--- a/po/es.po
+++ b/po/es.po
@@ -21,16 +21,15 @@ msgstr "Antes es necesario identificarse."
 
 #: ../IkiWiki/CGI.pm:224
 msgid "Login"
-msgstr ""
+msgstr "Identificación"
 
 #: ../IkiWiki/CGI.pm:225
-#, fuzzy
 msgid "Preferences"
-msgstr "Las preferencias se han guardado."
+msgstr "Preferencias"
 
 #: ../IkiWiki/CGI.pm:226
 msgid "Admin"
-msgstr ""
+msgstr "Administración"
 
 #: ../IkiWiki/CGI.pm:283
 msgid "Preferences saved."
@@ -65,8 +64,7 @@ msgstr "Ha sido expulsado."
 
 #: ../IkiWiki/CGI.pm:715
 msgid "login failed, perhaps you need to turn on cookies?"
-msgstr ""
-"registro fallido, ¿ tal vez necesita activar las cookies en el navegador ?"
+msgstr "registro fallido, ¿ tal vez necesita activar las cookies en el navegador ?"
 
 #: ../IkiWiki/Plugin/aggregate.pm:62
 #, perl-format
@@ -133,9 +131,8 @@ msgid "There are no broken links!"
 msgstr "¡ No hay enlaces rotos !"
 
 #: ../IkiWiki/Plugin/conditional.pm:18
-#, fuzzy, perl-format
 msgid "%s parameter is required"
-msgstr "los parámetros \"test\" y \"then\" son obligatorios "
+msgstr "el parámetro %s es obligatorio"
 
 #: ../IkiWiki/Plugin/fortune.pm:18
 msgid "fortune failed"
@@ -143,8 +140,7 @@ msgstr "el programa fortune ha fallado"
 
 #: ../IkiWiki/Plugin/googlecalendar.pm:22
 msgid "failed to find url in html"
-msgstr ""
-"El complemento googlecalendar no ha encontrado un URL en el código html "
+msgstr "El complemento googlecalendar no ha encontrado un URL en el código html "
 
 #: ../IkiWiki/Plugin/graphviz.pm:59
 msgid "failed to run graphviz"
@@ -177,9 +173,7 @@ msgstr "redimensionado fallido: %s"
 
 #: ../IkiWiki/Plugin/inline.pm:36
 msgid "Must specify url to wiki with --url when using --rss or --atom"
-msgstr ""
-"Es obligatorio indicar un url al wiki cuando se usan los parámetros --rss ó "
-"--atom"
+msgstr "Es obligatorio indicar un url al wiki cuando se usan los parámetros --rss ó --atom"
 
 #: ../IkiWiki/Plugin/inline.pm:106
 #, perl-format
@@ -215,9 +209,7 @@ msgstr "La página %s está bloqueada por %s y no puede modificarse"
 #: ../IkiWiki/Plugin/mdwn.pm:37
 #, perl-format
 msgid "failed to load Markdown.pm perl module (%s) or /usr/bin/markdown (%s)"
-msgstr ""
-"no he podido cargar el módulo Perl Markdown.pm (%s) ó no he podido ejecutar "
-"el programa /usr/bin/markdown (%s)"
+msgstr "no he podido cargar el módulo Perl Markdown.pm (%s) ó no he podido ejecutar el programa /usr/bin/markdown (%s)"
 
 #: ../IkiWiki/Plugin/meta.pm:88
 msgid "stylesheet not found"
@@ -237,7 +229,7 @@ msgstr "ver más"
 
 #: ../IkiWiki/Plugin/openid.pm:45
 msgid "Log in with"
-msgstr ""
+msgstr "Identificarse mediante "
 
 #: ../IkiWiki/Plugin/openid.pm:48
 msgid "Get an OpenID"
@@ -308,7 +300,6 @@ msgid "early %A morning"
 msgstr "a primera hora de la mañana del %A "
 
 #: ../IkiWiki/Plugin/prettydate.pm:25
-#, fuzzy
 msgid "mid-morning %A"
 msgstr "a media mañana del %A"
 
