web commit by JoshTriplett: Add gnulist shortcut.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -26,6 +26,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=gnomebug url="http://bugzilla.gnome.org/show_bug.cgi?id=%s" desc="GNOME bug #%s"]]
 * [[shortcut name=linuxbug url="http://bugzilla.kernel.org/show_bug.cgi?id=%s" desc="Linux bug #%s"]]
+* [[shortcut name=gnulist url="http://lists.gnu.org/mailman/listinfo/%s" desc="%s@gnu.org"]]
 * [[shortcut name=marcmsg url="http://marc.info/?i=%s"]]
 * [[shortcut name=marclist url="http://marc.info/?l=%s"]]
 * [[shortcut name=gmane url="http://dir.gmane.org/gmane.%s" desc="gmane.%s"]]
