web commit by Fred: Add myself as a happy ikiwiki user

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -54,6 +54,7 @@ Personal sites and blogs
 * [Per Olofsson](http://people.dsv.su.se/~pelle/)
 * [Effective Programming](http://effectiveprogramming.com/)
 * [Embedded Moose](http://embeddedmoose.com), Andrew Greenberg's personal and consulting page.
+* [Chez Fred](http://fred.ccheznous.org)
 
 Please feel free to add your own ikiwiki site!
 
