web commit by http://camrdale.myopenid.com/: Add my site to the list

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -55,6 +55,7 @@ Personal sites and blogs
 * [Effective Programming](http://effectiveprogramming.com/)
 * [Embedded Moose](http://embeddedmoose.com), Andrew Greenberg's personal and consulting page.
 * [Chez Fred](http://fred.ccheznous.org)
+* [Cameron Dale](http://www.cs.sfu.ca/~camerond/personal/)
 
 Please feel free to add your own ikiwiki site!
 
