where did that encoding damage come from in KarlMW's commit? fix

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -31,7 +31,7 @@ Personal sites and blogs
 * [Sergio Talens-Oliag's personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * [Christian Aichinger's homepage](http://greek0.net/)
 * [Ben A'Lee's homepage](http://bmalee.eu/~bma/)
-* [Recai Okta's homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
+* [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
 * [Stefano Zacchiroli's blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones: Victor Moral's personal website in Spanish](http://taquiones.net)
@@ -41,8 +41,8 @@ Personal sites and blogs
 * [Christian Mock's homepage](http://www.tahina.priv.at/).
 * [Choffee](http://choffee.co.uk/).
 * [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
-* [Proper Treatment ](http://conway.rutgers.edu/~ccshan/wiki/)
-* [lost scraps](http://web.mornfall.net), pages/blog of Petr Rokai aka mornfall
+* [Proper Treatment 正當作法](http://conway.rutgers.edu/~ccshan/wiki/)
+* [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
 * [Ronan Le Hy's blog](http://bayesien.org), in French.
 * <http://iainmclaren.com>.
 * [formorers blog and website](http://www.formorer.de/webwiki/)
@@ -56,7 +56,8 @@ Personal sites and blogs
 * [Embedded Moose](http://embeddedmoose.com), Andrew Greenberg's personal and consulting page.
 * [Chez Fred](http://fred.ccheznous.org)
 * [Cameron Dale](http://www.cs.sfu.ca/~camerond/personal/)
-* [[KarlMW]]'s [homepage](http://mowson.org/karl/), generated with an ikiwiki [asciidoc plugin](http://mowson.org/karl/colophon/).
+* [[KarlMW]]'s [homepage](http://mowson.org/karl/), generated with an ikiwiki 
+  [asciidoc plugin](http://mowson.org/karl/colophon/).
 
 Please feel free to add your own ikiwiki site!
 
