--- a/doc/users/KarlMW/discussion.mdwn
+++ b/doc/users/KarlMW/discussion.mdwn
@@ -2,4 +2,16 @@ When you edited [[ikiwikiusers]] all the utf-8 on the page was removed. Is this 
 
 > Ooops!  Sorry - yes, my fault - I was using w3m, which spawned nano to edit the text, and I'm not setup for utf-8.  I'll be more careful in future.
 
-> While I have your attention...  I got my asciidoc plugin going, at least well enough to render my website without complaint. If you want to have a look at it, the plugin is at <http://mowson.org/karl/colophon>. Is it worthy of adding to the ikiwiki plugin collection? This is my first ever perl programming, so I may well have made absurd mistakes - if there are things that need changing then I will probably need help/guidance. --KarlMW
+> While I have your attention...  I got my asciidoc plugin going, at least
+> well enough to render my website without complaint. If you want to have a
+> look at it, the plugin is at <http://mowson.org/karl/colophon>. Is it
+> worthy of adding to the ikiwiki plugin collection? This is my first ever
+> perl programming, so I may well have made absurd mistakes - if there are
+> things that need changing then I will probably need help/guidance.
+> --KarlMW
+
+>> The main problem I see is the html escaping issue. This is not really
+>> unique to asciidoc, see [[patchqueue/format_escape]]. I wonder if the
+>> technique provided by that patch could be used to let your plugin
+>> automatically handle the escaping. Unfortunatey, I have not yet gotten
+>> around to reviewing/applying the patch. --[[Joey]]
