web commit by JoshTriplett: Mark as done.

--- a/doc/todo/Account-creation_password.mdwn
+++ b/doc/todo/Account-creation_password.mdwn
@@ -2,3 +2,5 @@
 simplistic anti-spam measure.  (Some wikis edited by a particular group use an
 account creation password as an "ask an existing member to get an account"
 system.) --[[JoshTriplett]]
+
+[[bugs/done]] --[[JoshTriplett]]
