--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -59,6 +59,7 @@ Personal sites and blogs
 * [[KarlMW]]'s [homepage](http://mowson.org/karl/), generated with an ikiwiki 
   [asciidoc plugin](http://mowson.org/karl/colophon/).
 * Carl Worth's [homepage](http://www.cworth.org), and eventually some blog-like content there as well.
+* [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 
 Please feel free to add your own ikiwiki site!
 
