web commit by cworth

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -58,7 +58,7 @@ Personal sites and blogs
 * [Cameron Dale](http://www.cs.sfu.ca/~camerond/personal/)
 * [[KarlMW]]'s [homepage](http://mowson.org/karl/), generated with an ikiwiki 
   [asciidoc plugin](http://mowson.org/karl/colophon/).
-* Carl Worth's [homepage](http://www.cworth.org), and eventually some blog-like content there as well.
+* [Carl Worth's Boring Web Pages](http://www.cworth.org)
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 
 Please feel free to add your own ikiwiki site!
