* Fix FTBFS in test suite introduced in last version. Closes: #425891

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
     the same way, this prevents complications in dealing with two pages
     creating the same file. The move will be handled transparently, though you
     might want to rebuild your wiki to make it occur in one step.
+  * Fix FTBFS in test suite introduced in last version. Closes: #425891
 
- -- Joey Hess <joeyh@debian.org>  Thu, 24 May 2007 15:31:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 May 2007 16:09:59 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
