--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -12,7 +12,7 @@ and instead uses a revision control system such as [[Subversion]].
 
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-[[version_2.0|news/ikiwiki_version_2.0]] is now available.  
+[[Version_2.0|news/ikiwiki_version_2.0]] is now available.  
 If you use ikiwiki, please list your wiki in [[IkiWikiUsers]].
 Thanks! --[[Joey]]
 """]]
