--- a/doc/users/KarlMW/discussion.mdwn
+++ b/doc/users/KarlMW/discussion.mdwn
@@ -1,17 +1,25 @@
 When you edited [[ikiwikiusers]] all the utf-8 on the page was removed. Is this an issue with the web browser you used? I've fixed the utf-8 damage. --[[Joey]]
 
-> Ooops!  Sorry - yes, my fault - I was using w3m, which spawned nano to edit the text, and I'm not setup for utf-8.  I'll be more careful in future.
+> Ooops!  Sorry - yes, my fault - I was using w3m, which spawned nano to edit the text, and I'm not setup for utf-8.  I'll be more careful in future.  --[[KarlMW]]
 
-> While I have your attention...  I got my asciidoc plugin going, at least
-> well enough to render my website without complaint. If you want to have a
-> look at it, the plugin is at <http://mowson.org/karl/colophon>. Is it
-> worthy of adding to the ikiwiki plugin collection? This is my first ever
-> perl programming, so I may well have made absurd mistakes - if there are
-> things that need changing then I will probably need help/guidance.
-> --KarlMW
+## Asciidoc
 
->> The main problem I see is the html escaping issue. This is not really
->> unique to asciidoc, see [[patchqueue/format_escape]]. I wonder if the
->> technique provided by that patch could be used to let your plugin
->> automatically handle the escaping. Unfortunatey, I have not yet gotten
->> around to reviewing/applying the patch. --[[Joey]]
+While I have your attention...  I got my asciidoc plugin going, at least
+well enough to render my website without complaint. If you want to have a
+look at it, the plugin is at <http://mowson.org/karl/colophon>. Is it
+worthy of adding to the ikiwiki plugin collection? This is my first ever
+perl programming, so I may well have made absurd mistakes - if there are
+things that need changing then I will probably need help/guidance.
+--[[KarlMW]]
+
+> The main problem I see is the html escaping issue. This is not really
+> unique to asciidoc, see [[patchqueue/format_escape]]. I wonder if the
+> technique provided by that patch could be used to let your plugin
+> automatically handle the escaping. Unfortunatey, I have not yet gotten
+> around to reviewing/applying the patch. --[[Joey]]
+
+>> Escaping is indeed a problem with asciidoc - it seems to me that asciidoc still processes some things which have supposedly been escaped, although that may just be a matter of me misunderstanding something.  Inline escaping is done with both prefix and suffix of "+++" - no way to nest it.  Block escaping starts and ends with a line of "++++" (4 or more of "+").
+
+>> I suspect that asciidoc can't really be made to play nice to the extent that I would want casual users/abusers to have it as a markup option on a live wiki - it's fine for a personal site where you can look at the output before putting it online, but I think it would be a hideously gaping integrity hole for anything more than that.  However, for a personal site (as I am using it), it does seem to have its uses.
+
+>> I'll keep an eye on the format_escape plugin, and assuming it is accepted into ikiwiki, will see if I can apply it to asciidoc. --[[KarlMW]]
