--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -3,7 +3,7 @@ posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS
 feed.
 
 [[inline pages="news/* and !*/Discussion"
-feedpages="created_after(news/version_1.49)" rootpage="news" show="30"]]
+feedpages="created_after(news/Article_on_Ikiwiki_as_a_BTS)" rootpage="news" show="30"]]
 
 By the way, some other pages with RSS feeds about ikiwiki include
 [[plugins]], [[TODO]] and [[bugs]].
