* Apply a patch from Carl Worth allowing a class attribute to be passed   through the img plugin. Also allow the id attribute to be passed through.

--- a/doc/bugs/img_plugin_should_pass_through_class_attribute.mdwn
+++ b/doc/bugs/img_plugin_should_pass_through_class_attribute.mdwn
@@ -6,6 +6,8 @@ An example of the feature in use can be seen here (notice class="floatleft" and 
 
 And here's a patch to implement it. Will this survive markdown munging? It seems quite unlikely... How does one protect a block like this? Oh well, we'll see what happens.
 
+> thanks, [[done]] --[[Joey]]
+
 -Carl
 
     From 405c29ba2ef97a514bade33ef826e71fe825962b Mon Sep 17 00:00:00 2001
