--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,10 @@ ikiwiki (2.2) UNRELEASED; urgency=low
     creating the same file. The move will be handled transparently, though you
     might want to rebuild your wiki to make it occur in one step.
   * Fix FTBFS in test suite introduced in last version. Closes: #425891
+  * Apply a patch from Carl Worth allowing a class attribute to be passed
+    through the img plugin. Also allow the id attribute to be passed through.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 24 May 2007 16:09:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2007 15:00:02 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
