--- a/doc/plugins/img.mdwn
+++ b/doc/plugins/img.mdwn
@@ -16,10 +16,15 @@ Note that this is a stripped down version of Christian Mock's
 
 	\[[img image1.jpg size="200x200" alt="clouds"]]
 
-The `alt` parameter is optional. The `size` parameter is also optional,
-defaulting to full size. Note that the original image's aspect ratio is
-always preserved, even if this means making the image smaller than the
-specified size.
+The image file will be searched for using the same rules as used to find
+the file pointed to by a [[WikiLink]].
+
+The `size` parameter is optional, defaulting to full size. Note that the
+original image's aspect ratio is always preserved, even if this means
+making the image smaller than the specified size.
+
+You can also pass `alt`, `class` and `id` parameters. These are passed through
+unchanged to the html img tag.
 
 You can also set default values that will be applied to all later images on
 the page, unless overridden. Useful when including many images on a page.
@@ -28,7 +33,3 @@ the page, unless overridden. Useful when including many images on a page.
 	\[[img photo1.jpg]]
 	\[[img photo2.jpg]]
 	\[[img photo3.jpg size=200x600]]
-
-You can also reference an image in /images like this:
-
-	\[[img /images/photo3.jpg size=200x600]]
