--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -1,5 +1,5 @@
 This page is a place to document tips and techniques for using ikiwiki.
 
-[[inline pages="tips/* and !*/Discussion" 
+[[inline pages="tips/* and !*/*" 
 feedpages="created_after(tips/howto_avoid_flooding_aggregators)" archive="yes"
 rootpage="tips" postformtext="Add a new tip about:" show=0]]
