--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
     numerically. This works better in the current landscape of a rss spec that
     doesn't specify encoding, and variously broken feed consumers, according
     to <http://www.rssboard.org/rss-profile#data-types-characterdata>.
+  * Correct some issues with display of unhandled preprocessor directives.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2007 15:34:27 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2007 21:56:11 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
