solicit links to soc blogs and other info

--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -15,3 +15,6 @@ the following projects will be worked on:
   by Taylor Killian
 * Creating a gallery of a bunch of images  
   by [[ArpitJain]]
+
+Students working on these projects are encouraged to add links to any blogs,
+patch repositories, etc that they will use.
