web commit by cworth: Remove excess \ characters.

--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -3,7 +3,7 @@ WikiLinks provide easy linking between pages of the wiki. To create a
 For example `\[[WikiLink]]`.
 
 If you ever need to write something like `\[[WikiLink]]` without creating a
-wikilink, just prefix it with a `\`, like `\\\\[[WikiLink]]`.
+wikilink, just prefix it with a `\`, like `\\[[WikiLink]]`.
 
 There are some special [[SubPage/LinkingRules]] that come into play when
 linking between [[SubPages|SubPage]].
