--- a/doc/install/discussion.mdwn
+++ b/doc/install/discussion.mdwn
@@ -28,3 +28,9 @@ How do I fix this?  There may be a bit of old ikiwiki left behind because
 I did once have an older version installed but I thought I had removed all
 traces of it.
 
+> I'm quite sure that you still have some of it floating around, since
+> ikiwiki seems to be loading an old IkiWiki.pm.
+> 
+> I don't understand though why it's not finding ./IkiWiki.pm first. The
+> `-I` in the command line should make it look for files in the current
+> directory first. --[[Joey]]
