web commit by http://chrisisbd.myopenid.com/

--- a/doc/install/discussion.mdwn
+++ b/doc/install/discussion.mdwn
@@ -87,3 +87,7 @@ However I'm still getting the following error in 'make test':-
 > What version of perl are you using? It seems to have some problem with
 > operator overloading.
 > --[[Joey]]
+
+home$ perl -v
+
+This is perl, v5.8.8 built for i486-linux
