--- a/doc/plugins/toggle/discussion.mdwn
+++ b/doc/plugins/toggle/discussion.mdwn
@@ -3,10 +3,12 @@
 Is it possible to use another plugin into your toggle plugin? For example,
 I want to have toggleable table and try to use Victor Moral's table plugin,
 but no success. How can I do it?
-
 --PTecza
 
 > Yes, you can nest preprocessor directives. However, due to the issues
 > discussed [[here|todo/nested_preprocessor_directives]], it's not
 > currently supported to nest multiple levels of the same quotes.
 > --[[Joey]]
+
+>> Thanks a lot for the fast reply, Joey! It's good to know it.
+>> --PTecza
