web commit by cworth: Es

--- a/doc/bugs/A_page_that_inlines_pages__61____34____42____34___results_in_unnecessary_feed_generation.mdwn
+++ b/doc/bugs/A_page_that_inlines_pages__61____34____42____34___results_in_unnecessary_feed_generation.mdwn
@@ -11,7 +11,7 @@ that it will create):
 
 	cd /tmp
 	mkdir ikiwiki-test; cd ikiwiki-test; mkdir src
-	echo '[[inline pages="blog/*"]]' > src/myblog.mdwn
+	echo '\[[inline pages="blog/*"]]' > src/myblog.mdwn
 	mkdir src/blog; echo "A blog entry" > src/blog/entry.mdwn
 	echo 'use IkiWiki::Setup::Standard {
 		srcdir => "src",
@@ -29,7 +29,7 @@ that it will create):
 	echo "not a blog entry" > src/not-a-blog.mdwn
 	ikiwiki --setup setup
 	ls -l --time-style=full-iso output/myblog/index.rss
-	echo '[[inline pages="*"]]' > src/archives.mdwn
+	echo '\[[inline pages="*"]]' > src/archives.mdwn
 	ikiwiki --setup setup
 	ls -l --time-style=full-iso output/myblog/index.rss
 	echo "still not blogging" >> src/not-a-blog.mdwn
@@ -46,7 +46,7 @@ Here's the tail of the output that I see for this command:
 	done
 	$ ls -l --time-style=full-iso output/myblog/index.rss
 	-rw-r--r-- 1 cworth cworth 459 2007-06-01 06:34:36.000000000 -0700 output/myblog/index.rss
-	$ echo '[[inline pages="*"]]' > src/archives.mdwn
+	$ echo '\[[inline pages="*"]]' > src/archives.mdwn
 	$ ikiwiki --setup setup
 	refreshing wiki..
 	scanning archives.mdwn
