--- a/doc/bugs/disabling_backlinks.mdwn
+++ b/doc/bugs/disabling_backlinks.mdwn
@@ -8,3 +8,6 @@ I have tried `--numbacklinks 0` on ikiwiki commandline, but I still get backlink
 My first reading (and second and third) of this was that backlinks would be disabled entirely if I set numbacklinks=0, but now that I look again, I see the possibility that it is just controlling how many may be displayed before moving excess to a popup. If this is in fact how it is meant, I'll just get rid of the backlinks via the page template. Is this the case, that numbacklinks controls the popup, rather than backlinks in general?
 
 --[[KarlMW]]
+
+> Yes, it only controls the number of backlinks that are shown at the
+> bottom of the page vs how many are moved to the popup --[[Joey]]
