--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -12,7 +12,7 @@ the following projects will be worked on:
   by Ben Coffey  
   (See [[todo/fileupload/soc-proposal]])
 * Wiki WYSIWYG Editor  
-  by Taylor Killian
+  by [[TaylorKillian]]
 * Creating a gallery of a bunch of images  
   by [[ArpitJain]]
 
