* Explode some of the more insane regexps.

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
   * Correct some issues with display of unhandled preprocessor directives.
   * Apply a patch from Carl Worth adding support for using globs in link()
     in a PageSpec.
+  * Explode some of the more insane regexps.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2007 21:56:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 01 Jun 2007 19:39:38 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
