--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
   * Apply a patch from Carl Worth adding support for using globs in link()
     in a PageSpec.
   * Explode some of the more insane regexps.
+  * Add test suite for preprocessor directive parsing.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 01 Jun 2007 19:39:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 02 Jun 2007 01:03:37 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
