--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -23,7 +23,7 @@ files..)
 * **Refresh**, contributed by [[FredericLespez]]. Adapted from a free template
 designed by [styleshout](http://www.styleshout.com).
 You can see it [here](http://fred.ccheznous.org). You can download the local.css file and
-the modified templates [here](http://fred.ccheznous.org/refresh_20060602.zip).
+the modified templates [here](http://fred.ccheznous.org/refresh_20060602.tgz).
 
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using any of the stylesheets above. For example, if
